public/secondPage.css
:root{
    /* CSS HEX */
    --up-maroon: #800e13ff;
    --upsdell-red: #ad2831ff;
    --russian-violet: #30204eff;
    --plump-purple: #5a41b1ff;
    --xiketic: #0c0c1dff;
    }

*{
    box-sizing: border-box;
}

img#drink{
    border: purple 3px groove;
    max-width: 100%;
}

div.extended{
    min-height: 80vh;
    width: 80vw;
    display: grid;
    grid-template-columns: repeat(4,25%);
    grid-template-rows: repeat(5,20%);
    background-color: var(--russian-violet);
    margin: 2rem auto;
    justify-content: center;
    border: 0 var(--plump-purple) solid;
    border-width: 5px;
}

div.press{
    grid-column: 1 / 3;
    grid-row: 1 / 6;
    text-align: center;
    box-shadow: 2px 0px 20px purple;
    z-index: 2;
    transition: 1s;
}

div.press:hover{
    box-shadow: 2px 0px 50px purple;
}

section.ingredients{
    grid-column: span 2;
    grid-row: span 2;
    box-shadow: 0px 2px 20px purple;
    z-index: 1;
    transition: 1s;
}

section.ingredients:hover{
    box-shadow: 0px 2px 50px purple;
}

section.instructions{
    grid-column: 3 / 6;
    grid-row: span 3;
    transition: 2s;
    box-shadow: inset 0px 0px 1px darkred;
}

section.instructions:hover{
    box-shadow: inset 0px 0px 50px purple;
    z-index: 3;
}

div.extended > :not(div.press){
    padding: 2rem
}

div.extended * {
    background-color: #0c0c1dff;
}

p.type{
    text-decoration: underline;
    text-decoration-color: purple;
    text-decoration-thickness: 5px;
}

img.base{
    max-width: 100px;
    border: none;
}

a.homepageLink{
    display: block;
    background-color: #0c0c1dff;
    padding: 0.2rem;
    border: 5px purple solid;
    border-radius: 20px;
    width: 10vw;
    min-width: 200px;
    font-size: 1.5rem;
    margin: 2rem auto;
    text-align: center;
    text-decoration: none;
}

a.homepageLink:hover{
    background-color: var(--russian-violet);
}

